Made the column widths relative rather than fixed. Also increased the column gap a little.

--- a/style.css
+++ b/style.css
@@ -18,7 +18,11 @@ h1 {
     -webkit-column-count: 2;
     -moz-column-count: 2;
     column-count: 2;
-    -webkit-column-width: 250px;
-    -moz-column-width: 250px;
-    column-width: 250px;
+    -webkit-column-width: 20em;
+    -moz-column-width: 20em;
+    column-width: 20em;
+    -webkit-column-gap: 2em;
+    -moz-column-gap: 2em;
+    column-gap: 2em;
+
 }
